--- a/src/sass/components/_toc.scss
+++ b/src/sass/components/_toc.scss
@@ -4,10 +4,6 @@
   a {
     min-height: 2.75rem;
   }
-
-  ol {
-    list-style-position: inside;
-  }
  
   a {
     display: flex;
